# smart_home

./: .env.example  .gitattributes  .gitignore  CODE_REVIEW_REMEDIATION_SUMMARY.md  CODE_REVIEW_REPORT.md  Makefile  README.md  docker-compose.yml  《家庭智能中控 Web App 接口清单 v2.4》.md  《家庭智能中控 Web App 统一响应体与错误体规范 v2.4》.md  家庭智能中控_Web_App_Repository接口定义代码骨架_v2.4.md  家庭智能中控_Web_App_前后端技术栈选型_v2.4.md  家庭智能中控_Web_App_后端接口实现映射表_v2.4.md
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  openapi.json  pyproject.toml  realtime.schema.json  家庭智能中控_Web_App_PostgreSQL首版DDL_v2.4.sql
backend/alembic/: env.py
backend/alembic/versions/: 20260414_0001_initial_schema.py  20260418_0002_terminal_bootstrap_tokens.py  20260418_0003_terminal_pairing_code_sessions.py  20260421_0004_hotspot_icon_assets.py
backend/scripts/: bootstrap_dev_data.py  export_openapi.py  export_realtime_schema.py  issue_bootstrap_token.py
backend/src/: __init__.py  main.py
backend/src/app/: __init__.py  auth_di.py  backup_di.py  catalog_di.py  container.py  core_di.py  editor_di.py  energy_di.py  exception_handlers.py  health_routes.py  injector.py  modules.py  observability_middleware.py  openapi_contract.py  rate_limit_middleware.py  realtime_di.py  repository_di.py  router_registry.py  settings_di.py
backend/src/infrastructure/: __init__.py
backend/src/repositories/: __init__.py
backend/tests/integration/: conftest.py  test_assets_backup_routes.py  test_catalog_routes.py  test_device_control_routes.py  test_editor_routes.py  test_openapi_contract.py  test_realtime_ws.py  (+2 more)
(+691 files in other folders)
